# IvionOnline

editor/: editor_node.cpp
modules/ivion_online/: SCsub  register_types.cpp  register_types.h
modules/ivion_online/GodotWrapper/Include/Godot/: BattleInstance.hpp  Card.hpp  HostController.hpp  IvionEntity.hpp  MiscOption.hpp  Pawn.hpp  Player._hpp  Tile.hpp
modules/ivion_online/GodotWrapper/Source/Godot/: BattleInstance.cpp  Card.cpp  IvionEntity.cpp  Pawn.cpp  Player._cpp  Tile.cpp
modules/ivion_online/IOEngine/: .gitignore  CMakeLists.txt  GameMetaData.json  GenerateGameFromMetaData.py  GenerateLexerTokens.py  IvionSamples.txt  Makefile  README.md  SConscript  SConstruct  build_antlr4.sh  find_symbol.sh  gamestate.txt  requirements.txt
modules/ivion_online/IOEngine/BasicActions/: Move.json
modules/ivion_online/IOEngine/GeneraterBaseFiles/: EffectsHeaderBase  EffectsProtoBase  EffectsSourceBase  GameInstanceSourceBase  MutatationHeaderBase  MutationHeaderBase  MutationProtoBase  MutationSourceBase  TypesProtoBase  ValueTypeHeader  ValueTypeMutatationSourceBase  ValueTypeMutationHeaderBase  ValueTypeMutationProtoBase  ValueTypeMutationSourceBase  ValueTypeProtoBase
modules/ivion_online/IOEngine/Include/: Util.hpp
modules/ivion_online/IOEngine/Include/GRPC/: Class.grpc.pb.h  Class.pb.h  Effect.grpc.pb.h  Effect.pb.h  Effects.grpc.pb.h  Effects.pb.h  GameInfo.grpc.pb.h  GameInfo.pb.h  GameState.grpc.pb.h  GameState.pb.h  Mutation.grpc.pb.h  Mutation.pb.h  Type.grpc.pb.h  Type.pb.h  Types.grpc.pb.h  Types.pb.h
modules/ivion_online/IOEngine/Include/Godot/: BattleInstance.hpp  Card.hpp  Context.hpp  IvionEntity.hpp  Pawn.hpp  Player.hpp  Tile.hpp
modules/ivion_online/IOEngine/Include/IOEngine/: BasicActions.hpp  Branch.hpp  Card.hpp  CardLibrary.hpp  Effect_GENERATED.hpp  Entity.hpp  Executor.hpp  GameInstance.hpp  GameState.hpp  Integer.hpp  Ivion.hpp  Map.hpp  MemoryBuffer.hpp  MemoryPool.hpp  MiscOption.hpp  Mutation_GENERATED.hpp  ObjectPool.hpp  Player.hpp  Posable.hpp  Program.hpp  Python++.hpp  Team.hpp  Terrain.hpp  Tile.hpp  Types.hpp  Types_GENERATED.hpp  Util.hpp  Vec2.hpp  Vec2i.hpp  Zone.hpp
modules/ivion_online/IOEngine/Include/IOEngine/AST/: AST.hpp  Add.hpp  AssertDistance.hpp  AssertInRange.hpp  AssertInstantCheck.hpp  AssertPlayerFilter.hpp  BlockEnd.hpp  BlockStart.hpp  Cond.hpp  DamagePlayer.hpp  EndTheTurn.hpp  MetaCounter.hpp  Method.hpp  MoveCard.hpp  MovePlayer.hpp  PassPriority.hpp  PlayCard.hpp  PlayerDrawCard.hpp  ResourceCost.hpp  ResourceGain.hpp  SelectActiveCard.hpp  SelectActivePlayer.hpp  SelectCard.hpp  SelectCardController.hpp  SelectPlayer.hpp  SelectTile.hpp  SelectTopOfStack.hpp  StartTheTurn.hpp  Subtract.hpp  TargetPlayer.hpp  TargetTile.hpp  TravelPlayer.hpp
modules/ivion_online/IOEngine/Include/IOEngine/Antlr4/: IvionBaseVisitor.h  IvionLexer.h  IvionParser.h  IvionParserBaseVisitor.h  IvionParserVisitor.h  IvionVisitor.h
modules/ivion_online/IOEngine/Include/IOEngine/Effects/: Effects.hpp  Executor.hpp  Parser.hpp  Path.hpp
modules/ivion_online/IOEngine/Include/IOEngine/Vars/: Delta.hpp  Dictionary.hpp  Set.hpp  Stack.hpp  Var.hpp  Vector.hpp
modules/ivion_online/IOEngine/IvionGrammar/: Ivion.antlr4  IvionLexer.antlr4  IvionParser.antlr4  IvionParserRAW.antlr4
modules/ivion_online/IOEngine/Protobuf/: Class.proto  Effects.proto  GameInfo.proto  GameState.proto  Mutation.proto  Type.proto  Types.proto
modules/ivion_online/IOEngine/Python/Engine/: Effect.py  Executor.py  GameInstance.py  Main.py  Mutation.py
modules/ivion_online/IOEngine/Python/Engine/BasicActions/: Move.py
modules/ivion_online/IOEngine/Python/Engine/NetworkIO/: GameInfo_pb2.py
modules/ivion_online/IOEngine/Python/Engine/PlayerTypes/: RandomAgent.py
modules/ivion_online/IOEngine/Python/Engine/Types/: Integer.py  List.py  Object.py  Vec2i.py
modules/ivion_online/IOEngine/Source/: Branch.cpp  Card.cpp  CardLibrary.cpp  GameInstance.cpp  GameState.cpp  Ivion.cpp  MemoryPool.cpp  Player.cpp  Program.cpp  Tile.cpp  Types.cpp  Util.cpp
modules/ivion_online/IOEngine/Source/AST/: AssertDistance.cpp  AssertInRange.cpp  AssertInstantCheck.cpp  AssertPlayerFilter.cpp  Cond.cpp  DamagePlayer.cpp  EndTheTurn.cpp  MetaCounter.cpp  MoveCard.cpp  MovePlayer.cpp  PassPriority.cpp  PlayCard.cpp  PlayerDrawCard.cpp  ResourceCost.cpp  ResourceGain.cpp  SelectActiveCard.cpp  SelectActivePlayer.cpp  SelectCard.cpp  SelectCardController.cpp  SelectPlayer.cpp  SelectTile.cpp  SelectTopOfStack.cpp  StartTheTurn.cpp  TargetPlayer.cpp  TargetTile.cpp  TravelPlayer.cpp
modules/ivion_online/IOEngine/Source/Antlr4/: Ivion.interp  Ivion.tokens  IvionBaseVisitor.cpp  IvionLexer.cpp  IvionLexer.interp  IvionLexer.tokens  IvionParser.cpp  IvionParser.interp  IvionParser.tokens  IvionParserBaseVisitor.cpp  IvionParserVisitor.cpp  IvionVisitor.cpp
modules/ivion_online/IOEngine/Source/Antlr4/IvionGrammar/: Ivion.interp  Ivion.tokens  IvionBaseVisitor.cpp  IvionLexer.cpp  IvionLexer.interp  IvionLexer.tokens  IvionParser.cpp  IvionVisitor.cpp
modules/ivion_online/IOEngine/Source/Effects/: Effects.cpp  Executor.cpp  Path.cpp
modules/ivion_online/IOEngine/Source/GRPC/: Class.grpc.pb.cc  Class.pb.cc  Effect.grpc.pb.cc  Effect.pb.cc  Effects.grpc.pb.cc  Effects.pb.cc  GameInfo.grpc.pb.cc  GameInfo.pb.cc  GameState.grpc.pb.cc  GameState.pb.cc  Mutation.grpc.pb.cc  Mutation.pb.cc  Type.grpc.pb.cc  Type.pb.cc  Types.grpc.pb.cc  Types.pb.cc
modules/ivion_online/IOEngine/Source/Godot/: BattleInstance.cpp  Card.cpp  HostController.cpp  IvionEntity.cpp  Pawn.cpp  Player.cpp  Tile.cpp
modules/ivion_online/IOEngine/Source/IOEngine/: BasicActions.cpp  Effect.cpp  Effect_GENERATED.cpp  Executor.cpp  GameInstance.cpp  GameInstance_GENERATED.cpp  GameInstance_Generated.cpp  Mutation_GENERATED.cpp  Python++.cpp  Types_GENERATED.cpp  Util.cpp
modules/ivion_online/IOEngine/Test/: CMakeLists.txt  TestAntlr4.cpp  TestBranch.cpp  TestCard.cpp  TestCardLibrary.cpp  TestGame.cpp  TestMemoryPool.cpp  TestRandomGame.cpp  terminal.cpp
